feat(frontend): Add client dashboard Add the animals part in the client dash

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,3 +1,7 @@
 @import "./components/Navbar";
+@import "./components/NavOwner";
+@import "./components//ClientAnimals";
 @import "./pages/home/home";
 @import "./pages/auth/auth";
+@import "./components/CardAnimals";
+@import "./pages/dashboard/Client";
