--- a/frontend/src/styles/components/_Navbar.scss
+++ b/frontend/src/styles/components/_Navbar.scss
@@ -28,9 +28,24 @@
     .container {
       display: flex;
       flex-direction: row;
-      .item {
+      align-items: center;
+      li {
         margin-left: 25px;
+      }
+      .item {
         font-size: 18px;
+        position: relative;
+        &:hover {
+          &::after {
+            content: "";
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background-color: hsl(21, 80%, 71%);
+          }
+        }
       }
     }
   }
