--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -98,8 +98,34 @@ a {
   color: inherit;
   text-decoration: none;
 }
+a:hover::after {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: hsl(21, 80%, 71%);
+}
 .text-or {
   color: hsl(21, 80%, 71%);
+}
+
+.btn {
+  padding: 10px 35px;
+  border: none;
+  background: none;
+  border-radius: 10px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.btn-light {
+  border: 2px solid hsl(21, 80%, 71%);
+  color: hsl(21, 80%, 71%);
+}
+
+.btn-solid {
+  background-color: hsl(21, 80%, 71%);
 }
 
 @media (prefers-color-scheme: dark) {
