--- a/frontend/src/styles/pages/auth/_auth.scss
+++ b/frontend/src/styles/pages/auth/_auth.scss
@@ -11,13 +11,14 @@
     background-size: cover;
     background-position-x: 60%;
   }
+
   &-content {
-    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     padding: 60px 50px;
+
     h2 {
       position: relative;
       width: 100%;
@@ -38,11 +39,15 @@
       display: flex;
       flex-direction: column;
       margin-top: 50px;
-
+      .inp-content {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+      }
       input,
       select {
         width: 100%;
-        margin: 10px 0 30px;
+        margin: 5px 0 30px;
         height: 30px;
         border: none;
         border-bottom: 1px solid #000;
@@ -84,7 +89,32 @@
   &-nav {
     margin-top: 40px;
     a {
-      padding: 20px;
+      position: relative;
+      margin-left: 20px;
+      &:hover {
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -5  px;
+          left: 0;
+          width: 100%;
+          height: 2px;
+          background-color: #f0a37a;
+        }
+      }
     }
   }
+}
+.signup-content {
+  width: 40%;
+}
+.login-content {
+  width: 30%;
+}
+.signup-bg {
+  height: 100vh;
+  width: 60%;
+  background-image: url("../../../assets/dog.webp");
+  background-size: cover;
+  background-position-x: 100%;
 }
