--- a/frontend/src/styles/pages/home/_home.scss
+++ b/frontend/src/styles/pages/home/_home.scss
@@ -8,7 +8,7 @@
     .overlay {
       position: absolute;
       inset: 0;
-      background-color: #00000060;
+      background-color: #0000007d;
       width: 100%;
       height: 100%;
       z-index: 1;
@@ -41,10 +41,18 @@
       height: 100%;
       object-fit: cover;
     }
-  
+
     .owner,
     .sitter {
       font-size: 22px;
+    }
+    .btn-container {
+      width: 60%;
+      margin: 20px auto;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 20px;
     }
   }
 }
