feat: Add modal to add animal

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -4,4 +4,5 @@
 @import "./pages/home/home";
 @import "./pages/auth/auth";
 @import "./components/CardAnimals";
+@import "./components/AnimalModal";
 @import "./pages/dashboard/Client";
