--- a/frontend/src/styles/components/_ClientAnimals.scss
+++ b/frontend/src/styles/components/_ClientAnimals.scss
@@ -1,7 +1,7 @@
 .client-animals {
   width: 100%;
   height: 100%;
-  padding: 20px 20px;
+  padding: 20px 0px 20px 0px;
   display: flex;
   flex-direction: column;
   .btn {
@@ -14,8 +14,8 @@
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-column-gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-column-gap: 20px;
     grid-row-gap: 60px;
     grid-auto-rows: auto;
     justify-items: center;
