--- a/frontend/src/styles/components/_CardAnimals.scss
+++ b/frontend/src/styles/components/_CardAnimals.scss
@@ -1,44 +1,43 @@
 .animal-card {
   width: 100%;
   height: 100%;
-
+  position: relative;
   .img {
     width: 100%;
     height: 100%;
-    background-image: url("../../assets/photo-1586671267731-da2cf3ceeb80.avif");
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    .animal-title {
+    object-fit: cover;
+    z-index: 1;
+  }
+  .animal-title {
+    position: absolute;
+    bottom: 0;
+    z-index: 5;
+    color: #fff;
+    height: 90px;
+    width: 100%;
+    padding: 0 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    &::after {
+      content: "";
+
       position: absolute;
       bottom: 0;
       left: 0;
-      right: 0;
-      z-index: 5;
-      color: #fff;
-      height: 90px;
+      display: block;
       width: 100%;
-      padding: 0 20px;
-      &::after {
-        content: "";
-
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        display: block;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(to top, #000, #ffffff00);
-      }
-      h4 {
-        position: relative;
-        font-size: 30px;
-        z-index: 30;
-      }
-      p {
-        position: relative;
-        z-index: 30;
-      }
+      height: 100%;
+      background: linear-gradient(to top, #000, #ffffff00);
+    }
+    h4 {
+      position: relative;
+      font-size: 26px;
+      z-index: 30;
+    }
+    p {
+      position: relative;
+      z-index: 30;
     }
   }
 }
