--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -6,3 +6,4 @@
 @import "./components/CardAnimals";
 @import "./components/AnimalModal";
 @import "./pages/dashboard/Client";
+@import "./components/UserProfile";
