feat: Add Sitter checkout and redirection

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -7,3 +7,4 @@
 @import "./components/AnimalModal";
 @import "./pages/dashboard/Client";
 @import "./components/UserProfile";
+@import "./components//PaymentModal";
