--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -8,3 +8,4 @@
 @import "./pages/dashboard/Client";
 @import "./components/UserProfile";
 @import "./components//PaymentModal";
+@import "./pages/dashboard/Sitter";
