--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -9,3 +9,5 @@
 @import "./components/UserProfile";
 @import "./components//PaymentModal";
 @import "./pages/dashboard/Sitter";
+@import "./pages/jobs/Jobs";
+@import "./components/CardJobs";
