feat: Add commentary functionnality Owners are now able to let a comment on a sitter profile

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -11,3 +11,4 @@
 @import "./pages/dashboard/Sitter";
 @import "./pages/jobs/Jobs";
 @import "./components/CardJobs";
+@import "./components//Commentaries";
