--- a/frontend/src/styles/components/_CardJobs.scss
+++ b/frontend/src/styles/components/_CardJobs.scss
@@ -6,6 +6,14 @@
   padding-top: 150%;
   border-radius: 10px;
   .card-jobs {
+    .new {
+      position: absolute;
+      top: 0px;
+      left: -20px;
+      width: 60px;
+      height: 60px;
+      z-index: 8;
+    }
     .img {
       width: 100%;
       height: 100%;
