feat: Add carousel

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -12,3 +12,4 @@
 @import "./pages/jobs/Jobs";
 @import "./components/CardJobs";
 @import "./components//Commentaries";
+@import "./components//Carrousel";
