--- a/frontend/src/styles/pages/jobs/_Jobs.scss
+++ b/frontend/src/styles/pages/jobs/_Jobs.scss
@@ -132,6 +132,8 @@
         }
         .carrousel {
           width: 100%;
+          height: 100%;
+          padding-bottom: 20px;
         }
         .commentaries {
           width: 100%;
