--- a/frontend/src/styles/pages/jobs/_Jobs.scss
+++ b/frontend/src/styles/pages/jobs/_Jobs.scss
@@ -4,7 +4,7 @@
   &-section {
     height: 100%;
     width: 100%;
-    background-image: url("../../../assets/photo-1575859431352-39e2735a0aab.webp");
+    background-image: url("../assets/photo-1575859431352-39e2735a0aab.webp");
     background-repeat: no-repeat;
     background-size: cover;
     .container {
@@ -43,7 +43,7 @@
   &-section {
     height: 100%;
     width: 100%;
-    background-image: url("../../../assets/dog.webp");
+    background-image: url("../assets/dog.webp");
     background-repeat: no-repeat;
     background-size: cover;
     .container {
