--- a/frontend/src/styles/components/_Carrousel.scss
+++ b/frontend/src/styles/components/_Carrousel.scss
@@ -1,61 +1,38 @@
-.carrousel-component {
+.SlideCardList {
+  position: relative;
   width: 100%;
   height: 100%;
-  border-radius: 10px;
-  //   background-image: url("../../assets/dog.webp");
-  //   background-repeat: no-repeat;
-  //   background-size: cover;
-  position: relative;
-  padding-top: 10px;
   overflow: hidden;
-
-  .link {
-    &:hover {
-      &::after {
-        width: 0;
-        height: 0;
-      }
-    }
-  }
-
-  .img {
+  padding-top: 20px;
+  .SlideCard {
+    border-radius: 10px;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    transform: translateX(
-      -100%
-    ); /* Déplacez l'image hors de l'écran à droite. */
-    transition: transform 0.5s ease-in-out; /* Ajout de la transition de déplacement horizontal. */
-  }
-
-  .img.hidden {
-    transform: translateX(
-      100%
-    ); /* Déplacez l'image hors de l'écran à droite. */
-  }
-
-  .animal-info {
+    padding-top: 20px;
+    left: 0;
+    top: 0;
     position: absolute;
-    bottom: 0;
-    left: 0px;
-    height: 70px;
-    width: 100%;
-    padding-left: 20px;
-    &::after {
-      content: "";
+    transition: opacity 1s;
+    img {
       border-radius: 10px;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      display: block;
       width: 100%;
       height: 100%;
-      background: linear-gradient(to top, #000, #ffffff00);
+      object-fit: cover;
     }
-    .animal-name {
-      color: #fff;
-      position: relative;
-      z-index: 2;
+    &--hide {
+      opacity: 0;
     }
+    &--display {
+      animation: slide 1s forwards;
+    }
+  }
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0%);
   }
 }
