--- a/frontend/src/styles/components/_ClientAnimals.scss
+++ b/frontend/src/styles/components/_ClientAnimals.scss
@@ -9,7 +9,7 @@
     margin-bottom: 20px;
   }
   .animals-container {
-    overflow: scroll;
+    overflow-y: auto;
     margin-bottom: 40px;
     height: 100%;
     width: 100%;
