--- a/frontend/src/styles/pages/auth/_auth.scss
+++ b/frontend/src/styles/pages/auth/_auth.scss
@@ -7,7 +7,7 @@
   &-bg {
     height: 100vh;
     width: 70%;
-    background-image: url("../../../assets/cristian-castillo-73pyV0JJOmE-unsplash-min.webp");
+    background-image: url("../assets/cristian-castillo-73pyV0JJOmE-unsplash-min.webp");
     background-size: cover;
     background-position-x: 60%;
   }
@@ -39,10 +39,26 @@
       display: flex;
       flex-direction: column;
       margin-top: 50px;
+
       .inp-content {
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
         gap: 20px;
+        .items {
+          width: 100%;
+        }
+      }
+      .inp-content-2 {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        width: 100%;
+        .item {
+          &:nth-child(1) {
+            width: 100%;
+          }
+        }
       }
       input,
       select {
@@ -95,7 +111,7 @@
         &::after {
           content: "";
           position: absolute;
-          bottom: -5  px;
+          bottom: -5 px;
           left: 0;
           width: 100%;
           height: 2px;
@@ -114,7 +130,7 @@
 .signup-bg {
   height: 100vh;
   width: 60%;
-  background-image: url("../../../assets/dog.webp");
+  background-image: url("../assets/dog.webp");
   background-size: cover;
   background-position-x: 100%;
 }
