--- a/frontend/src/styles/pages/dashboard/_Client.scss
+++ b/frontend/src/styles/pages/dashboard/_Client.scss
@@ -5,7 +5,7 @@
     position: relative;
     height: 100%;
     width: 100%;
-    background-image: url("../../../assets/anna-dudkova-urs_y9NwFcc-unsplash.jpg");
+    background-image: url("../assets/anna-dudkova-urs_y9NwFcc-unsplash.jpg");
     background-size: cover;
   }
   .container {
