--- a/frontend/src/styles/pages/dashboard/_Sitter.scss
+++ b/frontend/src/styles/pages/dashboard/_Sitter.scss
@@ -4,7 +4,7 @@
   .hero {
     height: 100%;
     width: 100%;
-    background-image: url("../../../assets/photo-1575859431352-39e2735a0aab.webp");
+    background-image: url("../assets/photo-1575859431352-39e2735a0aab.webp");
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
